[gd_scene load_steps=5 format=3 uid="uid://dbkt5rnxap3mf"]

[ext_resource type="Script" path="res://Entities/Wanderer/wanderer.gd" id="1_k87vv"]
[ext_resource type="Texture2D" uid="uid://csjel41vdxina" path="res://Entities/Wanderer/wanderer.png" id="2_wsprq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fr8a"]
size = Vector2(4, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skw2n"]
size = Vector2(8, 8)

[node name="Wanderer" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_k87vv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 4)
texture = ExtResource("2_wsprq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_6fr8a")

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_skw2n")

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_area_2d_body_entered"]
